--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="8dp"
     android:outlineAmbientShadowColor="@color/purple_700"
     android:outlineSpotShadowColor="@color/purple_500"
     app:cardCornerRadius="15dp"
@@ -27,7 +28,7 @@
             android:fontFamily="@font/poppins_semi_bold"
             android:gravity="center_vertical"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:ellipsize="end"
             android:maxLines="1"
             android:minLines="1"
@@ -55,7 +56,7 @@
             android:fontFamily="@font/poppins_medium"
             android:gravity="center_vertical"
             android:textColor="@color/dark"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:ellipsize="end"
             android:maxLines="1"
             android:minLines="1"
@@ -66,8 +67,8 @@
 
         <ImageView
             android:id="@+id/iv_favorite"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/unfavorite"
             android:padding="8dp"
