some ui enhancements

--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
     android:layout_marginTop="2dp"
+    android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    android:outlineAmbientShadowColor="@color/purple_700"
-    android:outlineSpotShadowColor="@color/purple_500"
+    android:outlineAmbientShadowColor="@color/ambient_shadow"
+    android:outlineSpotShadowColor="@color/spot_shadow"
     app:cardCornerRadius="15dp"
     app:cardElevation="4dp"
     tools:targetApi="p">
@@ -25,13 +25,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:ellipsize="end"
             android:fontFamily="@font/poppins_semi_bold"
             android:gravity="center_vertical"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:ellipsize="end"
             android:maxLines="1"
             android:minLines="1"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@id/iv_favorite"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
             android:layout_width="0dp"
             android:layout_height="0.6dp"
             android:layout_marginTop="4dp"
-            android:background="@android:color/darker_gray"
+            android:background="@color/black"
             app:layout_constraintBottom_toTopOf="@id/user_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,13 +53,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:ellipsize="end"
             android:fontFamily="@font/poppins_medium"
             android:gravity="center_vertical"
-            android:textColor="@color/dark"
-            android:textSize="12sp"
-            android:ellipsize="end"
             android:maxLines="1"
             android:minLines="1"
+            android:textColor="@color/black"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_divider"
@@ -70,14 +70,13 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
-            android:background="@drawable/unfavorite"
-            android:padding="8dp"
+            android:src="@drawable/unfavorite"
             app:layout_constraintBottom_toBottomOf="@+id/user_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/user_name"
             app:layout_constraintTop_toTopOf="@+id/user_name"
-            tools:ignore="ContentDescription"
-            app:tint="@color/white" />
+            app:tint="@color/black"
+            tools:ignore="ContentDescription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
