--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -33,8 +33,9 @@
                     android:id="@+id/name_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="46dp"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
@@ -42,15 +43,30 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Name: "
-                        android:textSize="20sp" />
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/name_text_val"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="John Doe"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="14sp" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <ImageView
+                android:id="@+id/iv_favorite"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="8dp"
+                android:src="@drawable/unfavorite"
+                app:layout_constraintBottom_toBottomOf="@+id/name_container"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/name_container"
+                app:layout_constraintTop_toTopOf="@+id/name_container"
+                app:tint="@color/black"
+                tools:ignore="ContentDescription" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/username_container"
@@ -66,13 +82,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Username: "
-                        android:textSize="20sp" />
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:textSize="14sp"/>
 
                     <TextView
                         android:id="@+id/username_text_val"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="J121123"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="14sp" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -90,13 +108,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Email: "
-                        android:textSize="20sp" />
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/email_text_val"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="J121123"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="14sp" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -114,13 +134,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Phone: "
-                        android:textSize="20sp" />
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/phone_text_val"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="J121123"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="14sp" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -138,13 +160,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Website: "
-                        android:textSize="20sp" />
+                        android:fontFamily="@font/poppins_semi_bold"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/website_text_val"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="J121123"
+                        android:fontFamily="@font/poppins_regular"
                         android:textSize="14sp" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -161,6 +185,7 @@
                     android:outlineSpotShadowColor="@color/spot_shadow"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="4dp"
+                    android:background="@color/background"
                     app:layout_constraintTop_toBottomOf="@+id/website_container"
                     tools:ignore="MissingConstraints"
                     tools:targetApi="p">
@@ -171,14 +196,14 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@color/background">
+                        android:layout_marginBottom="8dp">
 
                         <TextView
                             android:id="@+id/address_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Address "
+                            android:fontFamily="@font/poppins_semi_bold"
                             android:textSize="20sp" />
 
                         <View
@@ -203,13 +228,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Street: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/address_street_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="123 Street"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -225,13 +252,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Suite: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/address_suite_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Suite 4"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -247,13 +276,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="City: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/address_city_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Suite 4"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -269,13 +300,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="ZipCode: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/address_zipcode_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="123456"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -291,13 +324,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="GEO: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/address_geo_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="123456"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -315,6 +350,7 @@
                     android:outlineSpotShadowColor="@color/spot_shadow"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="4dp"
+                    android:background="@color/background"
                     app:layout_constraintTop_toBottomOf="@+id/address_card_view"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:ignore="MissingConstraints"
@@ -326,14 +362,14 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="16dp"
-                        android:background="@color/background">
+                        android:layout_marginEnd="16dp">
 
                         <TextView
                             android:id="@+id/company_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Company "
+                            android:fontFamily="@font/poppins_semi_bold"
                             android:textSize="20sp" />
 
                         <View
@@ -358,13 +394,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Company: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/company_name_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Example Company"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -380,13 +418,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Catch Phrase: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/company_catchPhrase_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Lorem ipsum dolor sit amet"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -402,13 +442,15 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="BS: "
-                                android:textSize="18sp" />
+                                android:fontFamily="@font/poppins_semi_bold"
+                                android:textSize="14sp" />
 
                             <TextView
                                 android:id="@+id/company_bs_text_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Lorem ipsum dolor sit amet"
+                                android:fontFamily="@font/poppins_regular"
                                 android:textSize="14sp" />
                         </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.constraintlayout.widget.ConstraintLayout>
