--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -17,6 +17,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
+            android:layout_gravity="center"
             android:outlineAmbientShadowColor="@color/ambient_shadow"
             android:outlineSpotShadowColor="@color/spot_shadow"
             app:cardCornerRadius="15dp"
