--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/poppins_regular"
-            android:text="No Users Currently"
+            android:text="@string/no_fav_users"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="22sp"
