--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -12,6 +12,7 @@
             android:id="@+id/rv_users"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clipToPadding="false"
             tools:listitem="@layout/user_list_item" />
 
         <com.airbnb.lottie.LottieAnimationView
@@ -32,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/poppins_regular"
-            android:text="No Users Currently"
+            android:text="@string/no_users"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="22sp"
