--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="primary">@color/dark</color>
     <color name="secondary">@color/blue</color>
 
+    <color name="cell_background">@color/white</color>
     <color name="snack_bar">@color/dark</color>
 </resources>
